# django_drf

./: .dockerignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yaml  env.sample  local.yaml  manage.py  pyproject.toml  requirements.txt
app/api/v1/: urls.py
app/course/: admin.py  models.py
app/course/migrations/: 0001_initial.py  0006_course_updated_at.py
app/lesson/: admin.py  models.py  tests.py
app/payment/: admin.py  models.py
app/payment/migrations/: 0002_alter_payment_user.py  (+1 more)
app/subscription/: models.py  tests.py
app/users/: serializers.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
course/: models.py  serializers.py  tasks.py  validators.py  views.py
course/migrations/: 0002_course_owner.py  0003_course_link_video.py  0004_rename_link_video_course_url.py  0005_course_price.py
data/cache/: dump.rdb
django_drf/: settings.py  urls.py
lesson/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
lesson/migrations/: 0001_initial.py  0002_lesson_course.py  0003_remove_lesson_course_lesson_course.py  0004_alter_lesson_url.py  0005_lesson_owner_alter_lesson_course.py
payment/: models.py  serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py
subscription/: models.py  serializers.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py  0003_alter_subscription_user.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+26 files in other folders)
